bootstrap/argo-cd/resources/ingressroute-argocd.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: argocd-server
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argo.anotherlife.org.pl`)
    middlewares:
    - name: chain-traefik-dashboard
      namespace: traefik
    services:
    - kind: TraefikService
      name: argocd-server
      port: 80
  tls:
    domains:
    - main: anotherlife.org.pl
      sans:
      - .anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-production
