bootstrap/argo-cd/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:wDFuBkUi1Ty6Vrn2FX970ErPKIIT7I3opA==,iv:ubJcjJWMvwGYVCkGX+VQpTHpGsfiziqJr/enHOzl1LI=,tag:nWpMR4xKt/yT4P584cDpLQ==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: argocd-server
    name: argocd-server
    namespace: argocd
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:vVThemmGOpw4rok2MIt8kqgiAZZcJWQa9KRjtGDjbfr+nbAAMZA=,iv:yO7mKp0AyxUp4DM4gAZKJGkVC1s89I451Zza+oHdzAQ=,tag:U6LD8tEUNCAbTFp1ugAxMQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: argocd-server
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:1OLf8NkrWnTse82lUQP7FUrMC96bBgAAdg==,iv:BvCGfDHC6K8NUka1HzKXH8gA989/K4/T31j+MKkIHMg=,tag:OjERu/lrqeiiU7VPZK2+ow==,type:str]
              sans:
                - ENC[AES256_GCM,data:goBqcylMVksTomMYv72bsU5m/CgCo6NCfe8=,iv:gOdTIAa/A9gmkk3e5e4c3TqT4ZepKLp9R0vYZX+tYyA=,tag:Yd9a0DwwM9WvnA2GVpx5nQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: argocd-server-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWUE5rMWN3ak43YXRrM0t6
[...]
            jJWCdp1FUJE8mC203Rc6Zazuvl2DCDdicRehMaBkA2S8CNeWshYPMQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-21T23:21:23Z"
    mac: ENC[AES256_GCM,data:7Y/zrPCRLrGTGLmsSSnJqZn8qaaWKK/4YwLFQxw+YBV4t3cUlvHS0AK5szY3aF9YKQMrhyQnIGIBW8J4hNnRmAs5Lsz3OH89JmnOc4NnhJwo9JOfJHz0u8QCwzhlKmpU40zDgkXnRCKSQNwwp8x0kdcujygix3wzvPIv+aUJVU4=,iv:vdPdBoRKcByzJ40rXZYrCE5E/NqSAugZZh3JkcojRkc=,tag:icURisdkt60LfX8SF8bAGg==,type:str]
    pgp:
        - created_at: "2024-06-21T23:21:23Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+N2sM/O4ORJe1vglhrapq5/5/+K/ejLogf1vcxyUXG27U
[...]
            =dB4w
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
