bootstrap/argo-cd/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "2"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:Q7U4xDwAOwIvzX6RHq0RZM/4eL9cU6b+,iv:QCTJxENm6ER3f8p1qqfjCTE1FVh362XPyobR14xYIww=,tag:9WJaavOabwd/24oPwU/6+Q==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: argocd-server
    name: argocd-server
    namespace: argocd
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:1lP1dkXwZykWDIzNW6ZIvrBW6gYKdplV4bt+TpNAAxXu0juJGA==,iv:uKMjL1JyzIgApaabZwn+If1OoBjwRLNVmJgnX26yS/M=,tag:ypoA3vuGSAJhn6CdF5sFqQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: argocd-server
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:O53213JDLCPlIJzeoI7LkAkuaX80Awup,iv:Hev4jVsOE2SpcdtTn/ZNY3q9jzHOkdy0KWg04oBenRs=,tag:OVWb0XKOKdJUyqJgtHMyoQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:ENC1mnT+yFljosQ2aFPZzTw1b6xdB7ZYYQ==,iv:eJ2j6Yk+PKj000A6EkQawYKQEwzfdqfJRIfFqI6e+SM=,tag:LqNxNiTn7JExOTvNIaX+Tw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: argocd-server-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2K2pKd05IU3FVMjRYRHg0
[...]
            xk2tMCYPTWr1WcDdQxFUWuZIUJ4ciRvN6jYdJ2VIY28viN0edCZVkw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-06T16:10:29Z"
    mac: ENC[AES256_GCM,data:+9QKr3OQAkxy55Gp5MvNs6cEUVP3EVAG02P0BDzQurD9Qjq1kSfOm7SLxsBnumaNG4ly83ZopYN/TRpGRSmNKwYzpQF9jfo1JVAYPv3TfWn2mjgohcMTeLMUFYvmmp/h2Nf7BuU+DD4Ryb88Bf2N6us0QhOzjlkpoMDonNnCt5g=,iv:o7UDcY4ZxQMvaq5CEPqPChahwIbxg0Fu2Yho+bhFxns=,tag:cY9HWWIZxiQDg/a0QzklTg==,type:str]
    pgp:
        - created_at: "2024-06-21T23:23:55Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/8Cmy9+9WFrHY+AXnsjVvP4kBNTJnxPUCo3ZgqD1qHEQXr
[...]
            =YhO6
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
